--- a/index.html
+++ b/index.html
@@ -18,56 +18,41 @@
 
 
 <body>
-   
+
     <header>
-
-
-        <!-- <div class="logoo"><a href="#"></a></div>
-        <div class="menuu"><i class="fa-solid fa-bars"></i></div>
-        <nav class="nav">
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./pages/tienda.html">Tienda</a></li>
-                <li><a href="./pages/cafeOk.html">Cafe</a></li>
-                <li><a href="./pages/taller.html">Taller</a></li>
-                <li><a href="./pages/rodadas.html">Rodadas</a></li>
-                <li><a href="./pages/nosotros.html">Nosotros</a></li>
-            </ul>
-        </nav> -->
-    
-     <!--empieza menu hamb boots-->
-     <nav class="navbar navbar-expand-md bg-black navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html"><img src="./imagenes/logoreal2.png" alt="logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/tienda.html">Tienda</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/cafeOk.html">Cafe</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/rodadas.html">Rodadas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/taller.html">Taller</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
-                    </li>
-                </ul>
+        <!--empieza menu hamb boots-->
+        <nav class="navbar navbar-expand-md bg-black navbar-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./index.html"><img src="./imagenes/logoreal2.png" alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/tienda.html">Tienda</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/cafeOk.html">Cafe</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/rodadas.html">Rodadas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/taller.html">Taller</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-    <!--fin menu hamb boots-->
-    
+        </nav>
+        <!--fin menu hamb boots-->
     </header>
 
     <main class="index">
