--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,133 +8,122 @@
     <script src="https://kit.fontawesome.com/553c807147.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../icons/bike.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
-<!--inicio link BS-->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<!--fin link BS-->
-<link rel="stylesheet" href="../styleOk.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
+    <!--inicio link BS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--fin link BS-->
+    <link rel="stylesheet" href="../styleOk.css">
 
 </head>
 
 <body>
     <header>
-      <!--empieza menu hamb boots-->
-      <nav class="navbar navbar-expand-md bg-black navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src="../imagenes/logoreal2.png" alt="logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./tienda.html">Tienda</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./cafeOk.html">Cafe</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./rodadas.html">Rodadas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./taller.html">Taller</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Nosotros</a>
-                    </li>
-                </ul>
+        <!--empieza menu hamb boots-->
+        <nav class="navbar navbar-expand-md bg-black navbar-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"><img src="../imagenes/logoreal2.png" alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./tienda.html">Tienda</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./cafeOk.html">Cafe</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./rodadas.html">Rodadas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./taller.html">Taller</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Nosotros</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-    <!--fin menu hamb boots-->
-
-
-
-        <!-- <div class="logoo"></div>
-        <div class="menuu"><a href="#"><i class="fa-solid fa-bars"></i></a>
-          <ul class="ulHamburguesa">
-            <li class="liHambuguesa"><a href="../index.html" class="aHamburguesa">Home</a></li>
-            <li  class="liHambuguesa"><a href="./tienda.html" class="aHamburguesa">Tienda</a></li>
-            <li  class="liHambuguesa"><a href="./cafeOk.html" class="aHamburguesa">Cafe</a></li>
-            <li  class="liHambuguesa"><a href="./taller.html" class="aHamburguesa">Taller</a></li>
-            <li  class="liHambuguesa"><a href="./rodadas.html" class="aHamburguesa">Rodadas</a></li>
-            <li  class="liHambuguesa"><a href="./nosotros.html" class="aHamburguesa">Nosotros</a></li>
-          </ul>
-        </div>
-        <nav class="nav">
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./tienda.html">Tienda</a></li>
-                <li><a href="./cafeOk.html">Cafe</a></li>
-                <li><a href="./taller.html">Taller</a></li>
-                <li><a href="./rodadas.html">Rodadas</a></li>
-                <li><a href="./nosotros.html">Nosotros</a></li>
-            </ul>
-        </nav> -->
+        </nav>
+        <!--fin menu hamb boots-->
     </header>
 
     <section class="nosotros row">
         <div class="nosotrostercio1 col-12">
-            <h1>Quienes Somos</h1>  
+            <h1>Quienes Somos</h1>
         </div>
 
         <div id="carouselExampleIndicators" class="carousel slide col-sm-6 col-md-5" data-bs-ride="carousel">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
 
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="../imagenes/agus2.webp" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="../imagenes/fachadabikeplace.webp" class="d-block w-100" alt="...">
-              </div>            
+                <div class="carousel-item active">
+                    <img src="../imagenes/agus2.webp" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="../imagenes/fachadabikeplace.webp" class="d-block w-100" alt="...">
+                </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
             </button>
-          </div>
+        </div>
 
-<div class="nosotrostercio2 col-sm-6 col-md-7 fs-6">
-<p>"The bike place: un proyecto que alguna vez tuve con mi viejo y que se hizo realidad, se que desde arriba me diste todas las fuerzas para poder lograrlo. Ahora queda seguir peleandola para que ese esfuerzo llegue a ser lo que alguna vez soñamos juntos. Agradecido de cada persona que me ayudó desde mi familia, amigos, alumnos y todas las personas que me dieron y dan una mano todos los días." <strong>Agustin Gasparini, fundador de The Bike Place y Gasparini Team.</strong></p>
-</div>
-<div class="col-sm-12 col-md-12">
-    <h1>Conocenos un poco mas!</h1>
-    <div class="nosotrostercio3 col-sm-12 justify-content-center">        
-        <p class="text-white fs-4">
-          Estamos ubicados Av San Martin 1657, Villa Carlos Paz-Cordoba. Abrimos en noviembre del 2023. Contamos con venta de bicicletas nuevas y usadas, taller mecanico, tienda para ciclistas y bar cafe. Te esperamos para conocerlo!
-        </p>
-        <video src="../videos/10000000_840106781187557_547654043812005567_n.mp4" controls></video>
-</div>
+        <div class="nosotrostercio2 col-sm-6 col-md-7 fs-6">
+            <p>"The bike place: un proyecto que alguna vez tuve con mi viejo y que se hizo realidad, se que desde arriba
+                me diste todas las fuerzas para poder lograrlo. Ahora queda seguir peleandola para que ese esfuerzo
+                llegue a ser lo que alguna vez soñamos juntos. Agradecido de cada persona que me ayudó desde mi familia,
+                amigos, alumnos y todas las personas que me dieron y dan una mano todos los días." <strong>Agustin
+                    Gasparini, fundador de The Bike Place y Gasparini Team.</strong></p>
+        </div>
+        <div class="col-sm-12 col-md-12">
+            <h1>Conocenos un poco mas!</h1>
+            <div class="nosotrostercio3 col-sm-12 justify-content-center">
+                <p class="text-white fs-4">
+                    Estamos ubicados Av San Martin 1657, Villa Carlos Paz-Cordoba. Abrimos en noviembre del 2023.
+                    Contamos con venta de bicicletas nuevas y usadas, taller mecanico, tienda para ciclistas y bar cafe.
+                    Te esperamos para conocerlo!
+                </p>
+                <video src="../videos/10000000_840106781187557_547654043812005567_n.mp4" controls></video>
+            </div>
 
-</div>
+        </div>
 
     </section>
 
     <footer>
         <div class="footer1">
             <h5>San Martin 1657 Carlos Paz Cba Arg</h5>
-        <h5>Lun a Sab de 9hs a 21hs</h5>
+            <h5>Lun a Sab de 9hs a 21hs</h5>
         </div>
-            
-    <div class="redesSociales footer2">
-        <a href="https://wa.me/543541315193" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-        <a href="https://www.instagram.com/thebikeplace_/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://www.youtube.com/@wolfpack_adventures" target="_blank"><i class="fa-brands fa-tiktok"></i></a>  
-</div>
-    <a href="#" class="conocenos">Conocenos</a> 
+
+        <div class="redesSociales footer2">
+            <a href="https://wa.me/543541315193" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/thebikeplace_/" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.youtube.com/@wolfpack_adventures" target="_blank"><i
+                    class="fa-brands fa-tiktok"></i></a>
+        </div>
+        <a href="#" class="conocenos">Conocenos</a>
 
     </footer>
 
@@ -141,9 +131,14 @@
 
 
 
-<!-- inicio script BS -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-<!-- fin script BS -->
+    <!-- inicio script BS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+    <!-- fin script BS -->
 </body>
+
 </html>
