--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -52,53 +52,24 @@
             </div>
         </nav>
         <!--fin menu hamb boots-->
-
-
-        <!-- <div class="logoo"></div>
-        <div class="menuu"><i class="fa-solid fa-bars"></i></div>
-        <nav class="nav">
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./tienda.html">Tienda</a></li>
-                <li><a href="./cafeOk.html">Cafe</a></li>
-                <li><a href="./taller.html">Taller</a></li>
-                <li><a href="./rodadas.html">Rodadas</a></li>
-                <li><a href="./nosotros.html">Nosotros</a></li>
-            </ul>
-        </nav> -->
-
     </header>
+
     <main class="mainTienda">
         <div class="p-1 bg-danger text-white">
             <h1>Que estas buscando?</h1>
-            <p>The Bike Place cuenta con venta de bicicletas nuevas y usadas, indumentaria y accesorios para tu bike.</p>
+            <p>The Bike Place cuenta con venta de bicicletas nuevas y usadas, indumentaria y accesorios para tu bike.
+            </p>
         </div>
-    <div class="row">
-        <div class="tienda bici col-6"></div>
-        <div class="tienda col-6"><a href="./bicicletas.html">Bicicletas</a></div>
-        <div class="tienda col-6"><a href="./accesorios.html">Accesorios</a></div>
-        <div class="tienda accesorios col-6"></div>
-        <div class="tienda indumentaria col-6"></div>
-        <div class="tienda col-6"><a href="./indumentaria.html">Indumentaria</a></div>
-    </div>
+        <div class="row">
+            <div class="tienda bici col-md-12"><a href="./bicicletas.html">Bicicletas <i
+                        class="fa-solid fa-bicycle"></i></a></div>
+            <div class="tienda accesorios col-md-12"><a href="./accesorios.html">Accesorios <i
+                        class="fa-solid fa-star"></i></a></div>
+            <div class="tienda indumentaria col-md-12"><a href="./indumentaria.html">Indumentaria <i
+                        class="fa-solid fa-shirt"></i></a></div>
+        </div>
     </main>
-    <!-- <section class="sectionTienda">
-        <h1>Que estas buscando?</h1>
-        <table id="tablaTienda" cellspacing="2" cellpadding="100">
-            <tr>
-                <th><img class="imgTienda1" src="../imagenes/bicicletasparedgrande.webp" alt="imgBicicletas"></th>
-                <th><a href="./accesorios.html">Accesorios</a></th>
-                <th><img class="imgTienda2" src="../imagenes/ropa1.webp" alt="imgIndumentaria"></th>
-            </tr>
-            <tr>
-                <td><a href="./bicicletas.html"><strong>Bicicletas</strong></a></td>
-                <td><img class="imgTienda3" src="../imagenes/casco1.jpg" alt="imgAccesorios"></td>
-                <td><a href="./indumentaria.html"><strong>Indumentaria</strong></a></td>
-            </tr>
-        </table>
 
-
-    </section> -->
 
     <footer>
         <div class="footer1">
