agrego etiqueta meta descrip en las pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Somos una tienda integral de bicicletas. Contamos con venta de bicicletas e insumos para tu bike, taller mecanico y un espacio de dispersion pensado especialmente para los ciclistas.">
     <title>TheBikePlace</title>
     <script src="https://kit.fontawesome.com/553c807147.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./icons/bike.png" type="image/x-icon">
