--- a/pages/cafeOk.html
+++ b/pages/cafeOk.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contamos con un espacio pensado para la dispersion del ciclista y reunion de amigos que quieren compartir sus experiencias, con el mejor cafe y delicatessen disponibles para pasar un buen momento.">
     <title>TheBikePlace</title>
     <script src="https://kit.fontawesome.com/553c807147.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../icons/bike.png" type="image/x-icon">
