--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En esta seccion de la tienda encontraras todos los accesorios necesarios para ciclistas.">
     <title>TheBikePlace</title>
     <script src="https://kit.fontawesome.com/553c807147.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./icons/bike.png" type="image/x-icon">
