--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Bike Place cuenta con una tienda para ciclistas donde encontraras todo lo necesario para realizar este gran deporte. Bicicletas nuevas y usadas, indumentaria y accesorios. Encontra lo que necesitas aqui.">
     <title>TheBikePlace</title>
     <script src="https://kit.fontawesome.com/553c807147.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../icons/bike.png" type="image/x-icon">
@@ -55,7 +56,7 @@
     </header>
 
     <main class="mainTienda">
-        <div class="p-1 bg-danger text-white">
+        <div class="p-2 bg-danger text-white">
             <h1>Que estas buscando?</h1>
             <p>The Bike Place cuenta con venta de bicicletas nuevas y usadas, indumentaria y accesorios para tu bike.
             </p>
