--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -66,49 +66,49 @@
                 <h1>Casco para ciclista TRX 500</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur enim esse dolorem voluptate
                     blanditiis nulla et perspiciatis quod aliquid ratione.</p>
-                <a href="">Comprar</a>
+                <a href="#">Comprar</a>
             </div>
             <div class="card">
                 <img src="../imagenes/casco1.jpg" alt="casco">
                 <h1>Casco para ciclista TRX 500</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur enim esse dolorem voluptate
                     blanditiis nulla et perspiciatis quod aliquid ratione.</p>
-                <a href="">Comprar</a>
+                <a href="#">Comprar</a>
             </div>
             <div class="card">
                 <img src="../imagenes/casco1.jpg" alt="casco">
                 <h1>Casco para ciclista TRX 500</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur enim esse dolorem voluptate
                     blanditiis nulla et perspiciatis quod aliquid ratione.</p>
-                <a href="">Comprar</a>
+                <a href="#">Comprar</a>
             </div>
             <div class="card">
                 <img src="../imagenes/casco1.jpg" alt="casco">
                 <h1>Casco para ciclista TRX 500</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur enim esse dolorem voluptate
                     blanditiis nulla et perspiciatis quod aliquid ratione.</p>
-                <a href="">Comprar</a>
+                <a href="#">Comprar</a>
             </div>
             <div class="card">
                 <img src="../imagenes/casco1.jpg" alt="casco">
                 <h1>Casco para ciclista TRX 500</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur enim esse dolorem voluptate
                     blanditiis nulla et perspiciatis quod aliquid ratione.</p>
-                <a href="">Comprar</a>
+                <a href="#">Comprar</a>
             </div>
             <div class="card">
                 <img src="../imagenes/casco1.jpg" alt="casco">
                 <h1>Casco para ciclista TRX 500</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur enim esse dolorem voluptate
                     blanditiis nulla et perspiciatis quod aliquid ratione.</p>
-                <a href="">Comprar</a>
+                <a href="#">Comprar</a>
             </div>
             <div class="card">
                 <img src="../imagenes/casco1.jpg" alt="casco">
                 <h1>Casco para ciclista TRX 500</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur enim esse dolorem voluptate
                     blanditiis nulla et perspiciatis quod aliquid ratione.</p>
-                <a href="">Comprar</a>
+                <a href="#">Comprar</a>
             </div>
             <div class="card">
                 <img src="../imagenes/casco1.jpg" alt="casco">
