--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="En esta seccion de la tienda encontraras indumentaria ciclista.">
-    <title>TheBikePlace</title>
+    <meta name="description" content="En esta seccion de la tienda de The Bike Place encontraras indumentaria para el ciclista.">
+    <title>Tienda de Indumentaria | TheBikePlace</title>
     <script src="https://kit.fontawesome.com/553c807147.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./icons/bike.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
