--- a/pages/rodadas.html
+++ b/pages/rodadas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Bike Place te ofrece ser parte de Gasparini Team, un equipo de entrenamiento para ciclistas personalizado y de alto rendimiento.">
-    <title>TheBikePlace</title>
+    <title>Rodadas | TheBikePlace</title>
     <script src="https://kit.fontawesome.com/553c807147.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../icons/bike.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
