--- a/pages/taller.html
+++ b/pages/taller.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The Bike Place cuenta con taller mecanico para tu bicicleta. Realizamos presupuestos para reparaciones, repuestos y restauraciones de tu bicicleta.">
-    <title>TheBikePlace</title>
+    <meta name="description" content="The Bike Place cuenta con taller mecanico para tu bicicleta. Realizamos presupuestos para reparaciones, compra de repuestos y restauraciones de tu bicicleta.">
+    <title>Taller | TheBikePlace</title>
     <script src="https://kit.fontawesome.com/553c807147.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../icons/bike.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
