--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Bike Place cuenta con una tienda para ciclistas donde encontraras todo lo necesario para realizar este gran deporte. Bicicletas nuevas y usadas, indumentaria y accesorios. Encontra lo que necesitas aqui.">
-    <title>TheBikePlace</title>
+    <title>Tienda | TheBikePlace</title>
     <script src="https://kit.fontawesome.com/553c807147.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../icons/bike.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
