aplico each en indexMain.scss

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!--fin menu hamb boots-->
     </header>
 
-    <main class="index">
+    <!-- <main class="index">
         <div class="indexCafe">
             <a href="./pages/cafeOk.html">Cafe</a>
         </div>
@@ -69,7 +69,28 @@
         <div class="indexTienda">
             <a href="./pages/tienda.html">Tienda</a>
         </div>
+    </main> -->
+
+    <main class="index">
+        <div class="imgCafe-icon">
+            <a href="./pages/cafeOk.html">Cafe</a>
+        </div>
+        <div class="imgRodadas-icon">
+            <a href="./pages/rodadas.html">Rodadas</a>
+        </div>
+        <div class="imgTaller-icon">
+            <a href="./pages/taller.html">Taller</a>
+        </div>
+        <div class="imgTienda-icon">
+            <a href="./pages/tienda.html">Tienda</a>
+        </div>
     </main>
+
+    <!-- <div class="imgCafe-icon"></div>
+    <div class="imgRodadas-icon"></div>
+    <div class="imgTaller-icon"></div>
+    <div class="imgTienda-icon"></div> -->
+
 
     <footer>
         <div class="footer1">
