cambiando ruta de imgTaller

--- a/pages/taller.html
+++ b/pages/taller.html
@@ -61,7 +61,7 @@
 
         <div class="taller1 d-md-flex">
             <div class="fotoTaller">
-                <img src="../imagenes/taller.jpg" alt="imgTaller">
+                <img src="../imagenes/imgTaller.jpg" alt="imgTaller">
             </div>
             <div>
                 <p><strong>Contamos con el mejor asesoramiento para tu bike y trabajamos con repuestos nacionales e
